--- a/articles/active-directory/enterprise-users/index.yml
+++ b/articles/active-directory/enterprise-users/index.yml
@@ -12,12 +12,12 @@ metadata:
   ms.date: 10/19/2020
   author: curtand
   ms.author: curtand
-  ms.openlocfilehash: 3918c28d9657b077eefd5226be656ab6ad5a7dbf
-  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
+  ms.openlocfilehash: c6f9f80e9aecb68e1bd88f04a6aa032cf87470d7
+  ms.sourcegitcommit: 9889a3983b88222c30275fd0cfe60807976fd65b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/22/2020
-  ms.locfileid: "92372732"
+  ms.lasthandoff: 11/20/2020
+  ms.locfileid: "94986030"
 landingContent:
 - title: エンタープライズ ユーザー管理について
   linkLists:
@@ -26,29 +26,29 @@ landingContent:
     - text: ユーザー、グループ、ドメイン、ライセンス
       url: directory-overview-user-model.md
     - text: カスタム ロールの概要
-      url: ../roles/custom-overview.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      url: ../roles/custom-overview.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
   - linkListType: concept
     links:
     - text: Azure AD 組織からの独立
       url: licensing-directory-independence.md
     - text: グループを使用したアクセスの管理
-      url: ../fundamentals/active-directory-manage-groups.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      url: ../fundamentals/active-directory-manage-groups.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
 - title: はじめに
   linkLists:
   - linkListType: quickstart
     links:
     - text: ユーザーの追加
-      url: ../fundamentals/add-users-azure-active-directory.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      url: ../fundamentals/add-users-azure-active-directory.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
     - text: グループの有効期限ポリシーの設定
       url: groups-quickstart-expiration.md
     - text: ユーザーへのライセンスの割り当て
-      url: ../fundamentals/license-users-groups.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      url: ../fundamentals/license-users-groups.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
 - title: Azure AD ドメイン名の管理
   linkLists:
   - linkListType: how-to-guide
     links:
     - text: カスタム ドメイン名を追加する
-      url: ../fundamentals/add-custom-domain.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      url: ../fundamentals/add-custom-domain.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
     - text: カスタム ドメイン名の管理
       url: domains-manage.md
 - title: グループの管理
@@ -66,6 +66,6 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: カスタム ドメイン名を追加する
-      url: ../fundamentals/add-custom-domain.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      url: ../fundamentals/add-custom-domain.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
     - text: カスタム ドメイン名の管理
       url: domains-manage.md
