--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -259,7 +259,7 @@
         - name: LUIS サービス
           items:
             - name: LUIS 開発者向けリソース
-              href: 'https://docs.microsoft.com/azure/cognitive-services/luis/developer-reference-resource'
+              href: ../luis/developer-reference-resource.md
     - name: リソース
       items:
         - name: 言語のサポート
@@ -275,7 +275,7 @@
     - name: リファレンス
       items:
         - name: Speaker Recognition REST API
-          href: 'https://docs.microsoft.com/rest/api/speakerrecognition/'
+          href: /rest/api/speakerrecognition/
 - name: カスタム キーワード
   items:
     - name: カスタム キーワードの概要
@@ -493,7 +493,7 @@
         - name: Speech Studio の概要
           href: 'https://speech.microsoft.com'
         - name: Speech Studio を使用してカスタム コマンド アプリを作成する
-          href: quickstart-custom-speech-commands-create-new.md
+          href: ./quickstart-custom-commands-application.md
 - name: デプロイ
   items:
     - name: ログの有効化
