--- a/articles/machine-learning/data-science-virtual-machine/index.yml
+++ b/articles/machine-learning/data-science-virtual-machine/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: gvashishtha
   ms.author: gopalv
   ms.date: 09/13/2019
-  ms.openlocfilehash: 8405c652a749f560fd06754830ef46692e1f8db4
-  ms.sourcegitcommit: 96918333d87f4029d4d6af7ac44635c833abb3da
+  ms.openlocfilehash: 6cce3a1c8ec5c330c84009a8c20cbddd769b129c
+  ms.sourcegitcommit: 9889a3983b88222c30275fd0cfe60807976fd65b
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/04/2020
-  ms.locfileid: "93314790"
+  ms.lasthandoff: 11/20/2020
+  ms.locfileid: "94985775"
 landingContent:
 - title: Data Science Virtual Machine を使ってみる
   linkLists:
@@ -55,4 +55,4 @@ landingContent:
     - text: Azure Machine Learning コンピューティング インスタンス
       url: ../concept-compute-instance.md
     - text: Microsoft の ML 製品の比較
-      url: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure%252fmachine-learning%252fstudio%252fcontext%252fml-context
+      url: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=%2fazure%2fmachine-learning%2fstudio%2fcontext%2fml-context
