--- a/articles/time-series-insights/index.yml
+++ b/articles/time-series-insights/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: shreyasharmamsft
   ms.author: shresha
   ms.date: 07/09/2020
-  ms.openlocfilehash: 9a301f6e31d54238ea684e3d7c91d6a19c796427
-  ms.sourcegitcommit: 4b76c284eb3d2b81b103430371a10abb912a83f4
+  ms.openlocfilehash: 2950d394b50c2c031e53c85446fac2067b5035fd
+  ms.sourcegitcommit: 10d00006fec1f4b69289ce18fdd0452c3458eca5
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/01/2020
-  ms.locfileid: "93147064"
+  ms.lasthandoff: 11/21/2020
+  ms.locfileid: "95016736"
 landingContent:
 - title: Azure Time Series Insights について
   linkLists:
@@ -62,11 +62,11 @@ landingContent:
   - linkListType: how-to-guide
     links:
     - text: プロビジョニングと管理
-      url: time-series-insights-update-how-to-manage.md
+      url: ./how-to-provision-manage.md
     - text: TSID を選択する方法
       url: how-to-select-tsid.md
     - text: データ アクセスの許可
-      url: time-series-insights-data-access.md
+      url: ./concepts-access-policies.md
     - text: タイム シリーズ モデルの作成
       url: how-to-edit-your-model.md
     - text: クエリ データ
@@ -76,8 +76,8 @@ landingContent:
   - linkListType: reference
     links:
     - text: REST API の概要
-      url: https://docs.microsoft.com/rest/api/time-series-insights/
+      url: /rest/api/time-series-insights/
     - text: データ アクセスの概念 Gen2
-      url: https://docs.microsoft.com/rest/api/time-series-insights/reference-data-access-overview
+      url: /rest/api/time-series-insights/reference-data-access-overview
     - text: JavaScript クライアント SDK
       url: https://github.com/microsoft/tsiclient/blob/master/docs/API.md
