--- a/articles/active-directory/enterprise-users/TOC.yml
+++ b/articles/active-directory/enterprise-users/TOC.yml
@@ -7,9 +7,9 @@
 - name: クイックスタート
   items:
     - name: Azure AD へのユーザーの追加
-      href: ../fundamentals/add-users-azure-active-directory.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      href: ../fundamentals/add-users-azure-active-directory.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
     - name: ユーザーへのライセンスの割り当て
-      href: /azure/active-directory/fundamentals/license-users-groups?context=azure/active-directory/enterprise-users/context/ugr-context
+      href: /azure/active-directory/fundamentals/license-users-groups?context=%2fazure/active-directory/enterprise-users/context/ugr-context
     - name: グループの有効期限の設定
       href: groups-quickstart-expiration.md
     - name: グループの名前付けポリシーの設定
@@ -22,34 +22,34 @@
   expanded: true
   items:
     - name: 既定のユーザー アクセス許可の比較
-      href: ../fundamentals/users-default-permissions.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      href: ../fundamentals/users-default-permissions.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
     - name: グループベースのライセンスの基礎
-      href: ../fundamentals/active-directory-licensing-whatis-azure-portal.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      href: ../fundamentals/active-directory-licensing-whatis-azure-portal.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
     - name: グループでのアクセスの管理
-      href: ../fundamentals/active-directory-manage-groups.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+      href: ../fundamentals/active-directory-manage-groups.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
 - name: 操作方法ガイド
   expanded: true
   items:
     - name: ユーザーの管理
       items:
         - name: ユーザーの作成
-          href: ../fundamentals/add-users-azure-active-directory.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/add-users-azure-active-directory.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: ユーザーの一括作成
           href: users-bulk-add.md
         - name: ユーザー プロファイルの管理
-          href: ../fundamentals/active-directory-users-profile-azure-portal.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-users-profile-azure-portal.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: ユーザー情報のダウンロード
           href: users-bulk-download.md
         - name: ユーザー アカウントの共有
           href: users-sharing-accounts.md
         - name: 管理者ロールへのユーザーの割り当て
-          href: ../fundamentals/active-directory-users-assign-role-azure-portal.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-users-assign-role-azure-portal.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: ユーザー管理の機能強化
           href: users-search-enhanced.md
         - name: ユーザーの一括削除
           href: users-bulk-delete.md
         - name: 削除済みユーザーの復元
-          href: ../fundamentals/active-directory-users-restore.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-users-restore.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: ユーザーの一括復元
           href: users-bulk-restore.md
         - name: ユーザーのアクセスを取り消す
@@ -57,17 +57,17 @@
         - name: 非管理対象ディレクトリのアカウントを削除する
           href: users-close-account.md
         - name: ゲスト ユーザーを追加する
-          href: /azure/active-directory/b2b/what-is-b2b?context=azure/active-directory/enterprise-users/context/ugr-context
+          href: /azure/active-directory/b2b/what-is-b2b?context=%2fazure/active-directory/enterprise-users/context/ugr-context
         - name: ゲスト ユーザーにロールを割り当てる
-          href: /azure/active-directory/b2b/add-guest-to-role?context=azure/active-directory/enterprise-users/context/ugr-context
+          href: /azure/active-directory/b2b/add-guest-to-role?context=%2fazure/active-directory/enterprise-users/context/ugr-context
         - name: ゲスト ユーザーのアクセスを制限する
           href: users-restrict-guest-permissions.md
         - name: 動的グループとゲスト
-          href: /azure/active-directory/b2b/use-dynamic-groups?context=azure/active-directory/enterprise-users/context/ugr-context
+          href: /azure/active-directory/b2b/use-dynamic-groups?context=%2fazure/active-directory/enterprise-users/context/ugr-context
     - name: 組織を管理する
       items:
         - name: Azure AD 組織
-          href: ../fundamentals/active-directory-whatis.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-whatis.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: ドメイン名を管理する
           href: domains-manage.md
         - name: 管理対象としてサブドメインを確認する
@@ -81,13 +81,13 @@
         - name: ディレクトリの引き継ぎ
           href: domains-admin-takeover.md
         - name: Azure AD Connect
-          href: ../hybrid/whatis-hybrid-identity.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../hybrid/whatis-hybrid-identity.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
     - name: グループの管理
       items:
         - name: グループでのアクセスの管理
-          href: ../fundamentals/active-directory-manage-groups.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-manage-groups.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: グループの作成 (Azure portal)
-          href: ../fundamentals/active-directory-groups-create-azure-portal.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-groups-create-azure-portal.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: グループの管理 (PowerShell for Graph (v2))
           href: groups-settings-v2-cmdlets.md
         - name: PowerShell MSOnline を使用したグループの管理
@@ -95,7 +95,7 @@
         - name: グループとメンバーの一覧の検索
           href: groups-members-owners-search.md
         - name: グループ メンバーの追加または削除
-          href: ../fundamentals/active-directory-groups-members-azure-portal.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-groups-members-azure-portal.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: 動的グループ
           items:
             - name: 動的グループの作成
@@ -117,11 +117,11 @@
         - name: 削除されたグループの復元
           href: groups-restore-deleted.md
         - name: グループ設定の管理
-          href: ../fundamentals/active-directory-groups-settings-azure-portal.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-groups-settings-azure-portal.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: グループ所有者を管理する
-          href: ../fundamentals/active-directory-accessmanagement-managing-group-owners.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-accessmanagement-managing-group-owners.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: グループ内のグループの管理
-          href: ../fundamentals/active-directory-groups-membership-azure-portal.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-groups-membership-azure-portal.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: SaaS アプリへのグループ アクセスの追加
           href: groups-saasapps.md
         - name: グループの名前付けポリシーの設定
@@ -135,7 +135,7 @@
     - name: ライセンスを割り当てる
       items:
         - name: ユーザーへのライセンスの割り当て
-          href: ../fundamentals/license-users-groups.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/license-users-groups.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: グループへのライセンスの割り当て
           href: licensing-groups-assign.md
         - name: グループ ライセンスの問題の解決
@@ -153,7 +153,7 @@
     - name: サインインの管理
       items:
         - name: 会社のブランドのカスタマイズ
-          href: ../fundamentals/customize-branding.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/customize-branding.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: サインイン オプション
           href: signin-account-support.md
         - name: ホーム領域検出
@@ -167,7 +167,7 @@
     - name: トラブルシューティング
       items:
         - name: Azure AD のサポートを受ける
-          href: ../fundamentals/active-directory-troubleshooting-support-howto.md?context=azure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-troubleshooting-support-howto.md?context=%2fazure%2factive-directory%2fenterprise-users%2fcontext%2fugr-context
         - name: グループのトラブルシューティング
           href: groups-troubleshooting.md
         - name: グループ ライセンスのトラブルシューティング
