--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -201,7 +201,7 @@
             - name: PingAccess を使用してアプリケーション プロキシと統合する
               href: application-proxy-ping-access-publishing-guide.md
             - name: Azure AD Domain Services との統合
-              href: ../../active-directory-domain-services/deploy-azure-app-proxy.md?context=azure%252factive-directory%252fmanage-apps%252fcontext%252fmanage-apps-context
+              href: ../../active-directory-domain-services/deploy-azure-app-proxy.md?context=%2fazure%2factive-directory%2fmanage-apps%2fcontext%2fmanage-apps-context
             - name: Power BI との統合
               href: application-proxy-integrate-with-power-bi.md
             - name: Cloud App Security との統合
@@ -281,7 +281,7 @@
 - name: リソース
   items:
     - name: 開発者向けのサポート オプションとヘルプ オプション
-      href: ../develop/developer-support-help-options.md?context=azure%252factive-directory%252fmanage-apps%252fcontext%252fmanage-apps-context
+      href: ../develop/developer-support-help-options.md?context=%2fazure%2factive-directory%2fmanage-apps%2fcontext%2fmanage-apps-context
     - name: Azure フィードバック フォーラム
       href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
     - name: Microsoft Q&A 質問ページ
