--- a/articles/active-directory/managed-identities-azure-resources/TOC.yml
+++ b/articles/active-directory/managed-identities-azure-resources/TOC.yml
@@ -43,17 +43,17 @@
         - name: Azure Cosmos DB へのアクセス
           href: tutorial-linux-vm-access-cosmos-db.md
         - name: Azure Container Registry へのアクセス
-          href: ../../container-registry/container-registry-authentication-managed-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
+          href: ../../container-registry/container-registry-authentication-managed-identity.md?context=%2fazure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
         - name: ユーザー割り当てマネージド ID による Azure Resource Manager へのアクセス
           href: msi-tutorial-linux-vm-access-arm.md
     - name: Azure Service Bus
-      href: ../../service-bus-messaging/service-bus-managed-service-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
+      href: ../../service-bus-messaging/service-bus-managed-service-identity.md?context=%2fazure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
     - name: Azure App Service と Azure Functions
-      href: ../../app-service/overview-managed-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
+      href: ../../app-service/overview-managed-identity.md?context=%2fazure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
     - name: Azure Event Hubs
-      href: ../../event-hubs/authenticate-managed-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
+      href: ../../event-hubs/authenticate-managed-identity.md?context=%2fazure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
     - name: Azure Container Instances
-      href: ../../container-instances/container-instances-managed-identity.md?context=azure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
+      href: ../../container-instances/container-instances-managed-identity.md?context=%2fazure%2factive-directory%2fmanaged-identities-azure-resources%2fcontext%2fmsi-context
 - name: 概念
   items:
     - name: マネージド ID と Azure VM
