--- a/articles/active-directory/roles/TOC.yml
+++ b/articles/active-directory/roles/TOC.yml
@@ -11,16 +11,16 @@
 - name: チュートリアル
   items:
     - name: 動的グループの作成
-      href: ../enterprise-users/users-revoke-access.md?context=azure%2factive-directory%2froles%2fcontext%2fugr-context
+      href: ../enterprise-users/users-revoke-access.md?context=%2fazure%2factive-directory%2froles%2fcontext%2fugr-context
 - name: 概念
   expanded: true
   items:
     - name: Azure AD 管理者ロールの委任
       href: concept-delegation.md
     - name: 既定のユーザー アクセス許可の比較
-      href: ../fundamentals/users-default-permissions.md?context=azure%2factive-directory%2froles%2fcontext%2fugr-context
+      href: ../fundamentals/users-default-permissions.md?context=%2fazure%2factive-directory%2froles%2fcontext%2fugr-context
     - name: Azure と Azure AD のロールの比較
-      href: ../../role-based-access-control/rbac-and-directory-admin-roles.md?context=azure%2factive-directory%2froles%2fcontext%2fugr-context
+      href: ../../role-based-access-control/rbac-and-directory-admin-roles.md?context=%2fazure%2factive-directory%2froles%2fcontext%2fugr-context
     - name: Azure AD の管理単位について
       href: administrative-units.md
 - name: 攻略ガイド
@@ -29,15 +29,15 @@
     - name: ユーザーと役割
       items:
         - name: 管理者ロールへのユーザーの割り当て
-          href: ../fundamentals/active-directory-users-assign-role-azure-portal.md?context=azure%2factive-directory%2froles%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-users-assign-role-azure-portal.md?context=%2fazure%2factive-directory%2froles%2fcontext%2fugr-context
         - name: ユーザーのアクセスを取り消す
-          href: ../enterprise-users/users-revoke-access.md?context=azure%2factive-directory%2froles%2fcontext%2fugr-context
+          href: ../enterprise-users/users-revoke-access.md?context=%2fazure%2factive-directory%2froles%2fcontext%2fugr-context
         - name: ゲスト ユーザーにロールを割り当てる
-          href: ../b2b/add-guest-to-role.md?context=azure/active-directory/roles/context/ugr-context
+          href: ../b2b/add-guest-to-role.md?context=%2fazure/active-directory/roles/context/ugr-context
         - name: ゲスト ユーザーのアクセスを制限する
-          href: ../enterprise-users/users-restrict-guest-permissions.md?context=azure%2factive-directory%2froles%2fcontext%2fugr-context
+          href: ../enterprise-users/users-restrict-guest-permissions.md?context=%2fazure%2factive-directory%2froles%2fcontext%2fugr-context
         - name: 動的グループとゲスト
-          href: ../b2b/use-dynamic-groups.md?context=azure/active-directory/roles/context/ugr-context
+          href: ../b2b/use-dynamic-groups.md?context=%2fazure/active-directory/roles/context/ugr-context
     - name: ロールとアクセス許可
       expanded: true
       items:
@@ -57,7 +57,7 @@
         - name: カスタム ロールの割り当ての表示
           href: custom-view-assignments.md
         - name: Azure portal でのカスタム ロールの割り当て
-          href: ../fundamentals/active-directory-users-assign-role-azure-portal.md?context=azure%2factive-directory%2froles%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-users-assign-role-azure-portal.md?context=%2fazure%2factive-directory%2froles%2fcontext%2fugr-context
         - name: PowerShell でのカスタム ロールの割り当て
           href: custom-assign-powershell.md
         - name: エンタープライズ アプリのカスタム ロールの割り当て
@@ -111,7 +111,7 @@
     - name: トラブルシューティング
       items:
         - name: Azure AD のサポートを受ける
-          href: ../fundamentals/active-directory-troubleshooting-support-howto.md?context=azure%2factive-directory%2froles%2fcontext%2fugr-context
+          href: ../fundamentals/active-directory-troubleshooting-support-howto.md?context=%2fazure%2factive-directory%2froles%2fcontext%2fugr-context
 - name: リファレンス
   items:
     - name: タスク別の最小特権ロール
@@ -125,4 +125,4 @@
     - name: Azure AD PowerShell for Graph
       href: /powershell/azure/active-directory/install-adv2?view=azureadps-2.0
     - name: Azure AD サービスの制約
-      href: ../enterprise-users/directory-service-limits-restrictions.md?context=azure%2factive-directory%2froles%2fcontext%2fugr-context
+      href: ../enterprise-users/directory-service-limits-restrictions.md?context=%2fazure%2factive-directory%2froles%2fcontext%2fugr-context
