--- a/articles/cognitive-services/LUIS/index.yml
+++ b/articles/cognitive-services/LUIS/index.yml
@@ -12,12 +12,12 @@ metadata:
   title: Language Understanding (LUIS) のドキュメント
   titleSuffix: Azure Cognitive Services
   description: Language Understanding (LUIS) サービスを使用すると、アプリケーションが人の発言の意図を認識できるようになります。 LUIS には機械学習が使用されており、開発者は、自然言語でユーザー入力を受け取ってその意味を正確に抽出できるアプリケーションを構築できます。
-  ms.openlocfilehash: 3bae2e6e0a79dbc0106dc71a9510aa4dc318650c
-  ms.sourcegitcommit: 28c5fdc3828316f45f7c20fc4de4b2c05a1c5548
+  ms.openlocfilehash: ff928f1879f8cfd356fa020ff6afaa68b72f63c5
+  ms.sourcegitcommit: 10d00006fec1f4b69289ce18fdd0452c3458eca5
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/22/2020
-  ms.locfileid: "92364186"
+  ms.lasthandoff: 11/21/2020
+  ms.locfileid: "95019383"
 landingContent:
 - title: Language Understanding (LUIS) について
   linkLists:
@@ -70,7 +70,7 @@ landingContent:
     - text: 発話の例とともに意図を追加する
       url: luis-how-to-add-intents.md
     - text: 複数エンティティの追加
-      url: luis-how-to-add-example-utterances.md
+      url: ./luis-how-to-add-entities.md
     - text: フレーズ リスト機能を追加する
       url: luis-how-to-add-features.md
 - title: バージョン、トレーニング、テスト、公開
@@ -78,7 +78,7 @@ landingContent:
   - linkListType: concept
     links:
     - text: バージョン管理
-      url: luis-concept-version.md
+      url: ./luis-concept-app-iteration.md
     - text: 対話型テスト
       url: luis-concept-test.md
     - text: バッチ テスト
@@ -110,15 +110,15 @@ landingContent:
   - linkListType: quickstart
     links:
     - text: REST とともに C# を使用
-      url: luis-get-started-cs-get-intent.md
+      url: ./luis-get-started-get-intent-from-rest.md
     - text: REST とともに Go を使用
-      url: luis-get-started-go-get-intent.md
+      url: ./luis-get-started-get-intent-from-rest.md
     - text: REST とともに Java を使用
-      url: luis-get-started-java-get-intent.md
+      url: ./luis-get-started-get-intent-from-rest.md
     - text: REST とともに Node.js を使用
-      url: luis-get-started-node-get-intent.md
+      url: ./luis-get-started-get-intent-from-rest.md
     - text: REST とともに Python を使用
-      url: luis-get-started-python-get-intent.md
+      url: ./luis-get-started-get-intent-from-rest.md
 - title: リファレンス
   linkLists:
   - linkListType: reference
