--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: 20be1ac6c4701a84788f2e43903ab6b366dfe594
-  ms.sourcegitcommit: dc342bef86e822358efe2d363958f6075bcfc22a
+  ms.openlocfilehash: 62eb664d3987a4480be442817397d8969ec3a93e
+  ms.sourcegitcommit: 10d00006fec1f4b69289ce18fdd0452c3458eca5
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/12/2020
-  ms.locfileid: "94556560"
+  ms.lasthandoff: 11/21/2020
+  ms.locfileid: "95018686"
 highlightedContent:
   items:
   - title: 音声サービスとは
@@ -95,10 +95,10 @@ conceptualContent:
       url: speaker-recognition-overview.md
     - itemType: quickstart
       text: Speaker Recognition の使用を開始する
-      url: speaker-recognition-basics.md
+      url: ./get-started-speaker-recognition.md
     - itemType: how-to-guide
       text: Speaker Recognition API リファレンス
-      url: https://docs.microsoft.com/rest/api/speakerrecognition/
+      url: /rest/api/speakerrecognition/
   - title: カスタム キーワード
     links:
     - itemType: overview
@@ -180,22 +180,22 @@ tools:
   items:
   - title: C#
     imageSrc: https://docs.microsoft.com/media/logos/logo_Csharp.svg
-    url: https://aka.ms/csspeech/csharpref
+    url: /dotnet/api/microsoft.cognitiveservices.speech
   - title: C++
     imageSrc: https://docs.microsoft.com/media/logos/logo_Cplusplus.svg
-    url: https://aka.ms/csspeech/cppref
+    url: /cpp/cognitive-services/speech/
   - title: Java
     imageSrc: https://docs.microsoft.com/media/logos/logo_java.svg
-    url: https://aka.ms/csspeech/javaref
+    url: /java/api/com.microsoft.cognitiveservices.speech
   - title: JavaScript
     imageSrc: https://docs.microsoft.com/media/logos/logo_js.svg
-    url: https://aka.ms/csspeech/javascriptref
+    url: /javascript/api/microsoft-cognitiveservices-speech-sdk/
   - title: Objective-C と Swift
     imageSrc: https://docs.microsoft.com/media/logos/logo_ios.svg
-    url: https://aka.ms/csspeech/objectivecref
+    url: /objectivec/cognitive-services/speech/
   - title: Python
     imageSrc: https://docs.microsoft.com/media/logos/logo_python.svg
-    url: https://aka.ms/csspeech/pythonref
+    url: /python/api/azure-cognitiveservices-speech/
 additionalContent:
   sections:
   - items:
@@ -218,7 +218,7 @@ additionalContent:
       - text: リージョン
         url: regions.md
       - text: 学習する
-        url: https://docs.microsoft.com/learn/browse/?products=azure-cognitive-services&term=Speech
+        url: /learn/browse/?products=azure-cognitive-services&term=Speech
     - title: サポート
       links:
       - text: サポートとヘルプ
