--- a/articles/guides/operations/TOC.yml
+++ b/articles/guides/operations/TOC.yml
@@ -39,17 +39,17 @@
             - name: Linux VM の作成と管理
               href: ../../virtual-machines/linux/tutorial-manage-vm.md?toc=%2fazure%2fguides%2foperations%2ftoc.json
             - name: Jenkins CI/CD パイプライン
-              href: /azure/developer/jenkins/pipeline-with-github-and-docker?toc=%252fazure%252fguides%252foperations%252ftoc.json
+              href: /azure/developer/jenkins/pipeline-with-github-and-docker?toc=%2fazure%2fguides%2foperations%2ftoc.json
             - name: VM の負荷分散
               href: ../../virtual-machines/linux/tutorial-load-balancer.md?toc=%2fazure%2fguides%2foperations%2ftoc.json
             - name: Azure リソース マネージャーのテンプレートの作成
-              href: ../../azure-resource-manager/templates/template-syntax.md?toc=%252fazure%252fguides%252foperations%252ftoc.json
+              href: ../../azure-resource-manager/templates/template-syntax.md?toc=%2fazure%2fguides%2foperations%2ftoc.json
             - name: VM の大規模なバックアップ
               href: ../../backup/tutorial-backup-vm-at-scale.md
     - name: ハウツー ガイド
       items:
         - name: Azure の請求書と毎日の使用状況データをダウンロードする方法
-          href: ../../cost-management-billing/manage/download-azure-invoice-daily-usage-date.md?toc=%252fazure%252fguides%252foperations%252ftoc.json
+          href: ../../cost-management-billing/manage/download-azure-invoice-daily-usage-date.md?toc=%2fazure%2fguides%2foperations%2ftoc.json
     - name: リソース
       items:
         - name: Azure 製品カタログ
@@ -60,4 +60,4 @@
           href: 'https://azure.microsoft.com/pricing/calculator/'
         - name: Microsoft Azure ポータルの概要
           href: 'https://azure.microsoft.com/documentation/articles/azure-portal-overview/'
-    - name: References
+    - name: リファレンス
