--- a/articles/internet-peering/toc.yml
+++ b/articles/internet-peering/toc.yml
@@ -63,21 +63,21 @@
 - name: リファレンス
   items:
     - name: Azure CLI
-      href: 'https://docs.microsoft.com/cli/azure/network'
+      href: /cli/azure/network
     - name: Azure PowerShell
-      href: 'https://docs.microsoft.com/powershell/module/az.network'
+      href: /powershell/module/az.network
     - name: Java
-      href: 'https://docs.microsoft.com/java/api/'
+      href: /java/api/
     - name: Node.js
-      href: 'https://docs.microsoft.com/javascript/azure#azure-sdk'
+      href: /javascript/azure#azure-sdk
     - name: Python
       href: 'https://azure.microsoft.com/develop/python/'
     - name: Resource Manager テンプレート
-      href: 'https://docs.microsoft.com/azure/templates/microsoft.network/allversions'
+      href: /azure/templates/microsoft.network/allversions
 - name: リソース
   items:
     - name: Microsoft Learn でスキルを身に付ける
-      href: 'https://docs.microsoft.com/learn/browse/'
+      href: /learn/browse/
     - name: Azure のロードマップ
       href: 'https://azure.microsoft.com/roadmap/?category=networking'
     - name: ネットワークのブログ
