--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -93,7 +93,7 @@
       displayName: 'example, examples, studio, pipelines, data sets, modules'
       href: samples-designer.md
     - name: Open Datasets (パブリック)
-      href: ../open-datasets/samples.md?context=azure%252fmachine-learning%252fcontext%252fml-context
+      href: ../open-datasets/samples.md?context=%2fazure%2fmachine-learning%2fcontext%2fml-context
 - name: 概念
   items:
     - name: コストの計画と管理
@@ -449,7 +449,7 @@
             - name: カスタム Docker イメージを使用する
               href: how-to-deploy-custom-docker-image.md
             - name: IoT Edge
-              href: ../iot-edge/tutorial-deploy-machine-learning.md?context=azure%252fmachine-learning%252fservice%252fcontext%252fml-context
+              href: ../iot-edge/tutorial-deploy-machine-learning.md?context=%2fazure%2fmachine-learning%2fservice%2fcontext%2fml-context
             - name: FPGA 推論
               href: how-to-deploy-fpga-web-service.md
         - name: トラブルシューティングとデバッグ
@@ -530,7 +530,7 @@
           href: how-to-debug-parallel-run-step.md
     - name: CI/CD 用の Azure Pipelines
       displayName: 'continuous, integration, delivery'
-      href: /azure/devops/pipelines/targets/azure-machine-learning?context=azure/machine-learning/context/ml-context
+      href: /azure/devops/pipelines/targets/azure-machine-learning?context=%2fazure/machine-learning/context/ml-context
     - name: CI/CD 用の GitHub Actions
       href: how-to-github-actions-machine-learning.md
     - name: リソース クォータを管理する
@@ -595,7 +595,7 @@
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-machine-learning-service'
     - name: Microsoft の ML 製品の比較
-      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/context/ml-context
+      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=%2fazure/machine-learning/context/ml-context
     - name: Workbench の変更点
       displayName: 'desktop, ui, Workbench, upgrade, update, transfer'
       href: overview-what-happened-to-workbench.md
