--- a/articles/peering-service/TOC.yml
+++ b/articles/peering-service/TOC.yml
@@ -43,7 +43,7 @@
     - name: ネットワークのブログ
       href: 'https://azure.microsoft.com/blog/topics/networking'
     - name: ネットワークに関する Microsoft Q&A 質問ページ
-      href: 'https://docs.microsoft.com/answers/topics/azure-virtual-network.html'
+      href: /answers/topics/azure-virtual-network.html
     - name: ネットワークに関するフィードバック
       href: 'https://feedback.azure.com/forums/217313-networking?category_id=77469'
     - name: 価格
