commit translated contents

--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -89,6 +89,8 @@
               href: samples/resource-manager-web-app.md
             - name: Azure Functions
               href: samples/resource-manager-function-app.md
+        - name: データ収集ルール
+          href: samples/resource-manager-data-collection-rules.md
         - name: 診断設定
           href: samples/resource-manager-diagnostic-settings.md
         - name: Log Analytics ワークスペース
@@ -164,6 +166,7 @@
         - name: Azure Monitor をデプロイする
           href: deploy.md
         - name: 大規模にデプロイする
+          displayName: 'Azure Policy, Policy'
           href: deploy-scale.md
     - name: 管理と構成
       items:
@@ -351,6 +354,9 @@
             - name: 概要
               displayname: Azure Monitor agent
               href: platform/azure-monitor-agent-overview.md
+            - name: インストール
+              displayname: Azure Monitor agent
+              href: platform/azure-monitor-agent-install.md
             - name: データ コレクション
               displayname: 'data collection rule,Azure Monitor agent'
               href: platform/data-collection-rule-azure-monitor-agent.md
