--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -9,6 +9,7 @@
   items:
     - name: コストの分析を開始する
       href: costs/quick-acm-cost-analysis.md
+      displayName: 'Azure CLI, az costmanagement query, az costmanagement export'
     - name: 予算の作成 - Resource Manager テンプレート
       href: costs/quick-create-budget-template.md
       displayName: 'ARM template, resource manager template'
@@ -26,6 +27,7 @@
       href: costs/tutorial-acm-create-budgets.md
     - name: データのエクスポート
       href: costs/tutorial-export-acm-data.md
+      displayName: 'Azure CLI, az costmanagement query, az costmanagement export'
     - name: レコメンデーションに基づいて対応する
       href: costs/tutorial-acm-opt-recommendations.md
 - name: 概念
