commit translated contents

--- a/articles/azure-functions/index.yml
+++ b/articles/azure-functions/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: ggailey777
   ms.author: azfundocs
   ms.date: 09/17/2019
-  ms.openlocfilehash: 7a6f493bef86952de212eea264cccea1c0bcfeca
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 576b35c357c533918ff9bc384d816217730d34b1
+  ms.sourcegitcommit: cd9754373576d6767c06baccfd500ae88ea733e4
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "87810056"
+  ms.lasthandoff: 11/20/2020
+  ms.locfileid: "94965342"
 landingContent:
 - title: Azure Functions について
   linkLists:
@@ -41,15 +41,17 @@ landingContent:
   - linkListType: quickstart
     links:
     - text: はじめての Functions の作成 (C#)
-      url: functions-create-your-first-function-visual-studio.md
+      url: create-first-function-vs-code-csharp.md
     - text: はじめての Functions の作成 (Java)
-      url: functions-create-first-azure-function-azure-cli.md?pivots=programming-language-java
+      url: create-first-function-vs-code-java.md
     - text: はじめての Functions の作成 (JavaScript)
-      url: functions-create-first-function-vs-code.md?pivots=programming-language-javascript
+      url: create-first-function-vs-code-node.md
     - text: はじめての Functions の作成 (PowerShell)
-      url: functions-create-first-function-vs-code.md?pivots=programming-language-powershell
+      url: create-first-function-vs-code-powershell.md
     - text: はじめての Functions の作成 (Python)
-      url: functions-create-first-function-vs-code.md?pivots=programming-language-python
+      url: create-first-function-vs-code-python.md
+    - text: はじめての Functions の作成 (TypeScript)
+      url: create-first-function-vs-code-typescript.md
   - linkListType: learn
     links:
     - text: サーバーレス ロジックの作成
