--- a/articles/cognitive-services/text-analytics/toc.yml
+++ b/articles/cognitive-services/text-analytics/toc.yml
@@ -62,7 +62,7 @@
       href: How-tos/text-analytics-how-to-call-api.md
     - name: 言語検出
       href: How-tos/text-analytics-how-to-language-detection.md
-    - name: センチメント分析
+    - name: 感情分析とオピニオン マイニング
       href: How-tos/text-analytics-how-to-sentiment-analysis.md
     - name: キー フレーズの抽出
       href: How-tos/text-analytics-how-to-keyword-extraction.md
@@ -92,6 +92,8 @@
       href: /powershell/module/azurerm.cognitiveservices/
     - name: Text Analytics API
       items:
+        - name: v3.1.preview.3
+          href: 'https://westus2.dev.cognitive.microsoft.com/docs/services/TextAnalytics-v3-1-preview-3/'
         - name: v3.0
           href: 'https://westus.dev.cognitive.microsoft.com/docs/services/TextAnalytics-v3-0'
         - name: v2
