--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -945,6 +945,8 @@
               href: oracle-migrate-cosmos-db-blitzz.md
             - name: 移行 - Blitzz を使用して Apache Cassandra から Cassandra API へ
               href: cassandra-migrate-cosmos-db-blitzz.md
+            - name: 移行 - Databricks を使用して Apache Cassandra から Cassandra API へ
+              href: cassandra-migrate-cosmos-db-databricks.md
         - name: Change Feed
           href: cassandra-change-feed.md
         - name: コンテナーの作成 - Cassandra API
