--- a/articles/devtest-labs/TOC.yml
+++ b/articles/devtest-labs/TOC.yml
@@ -191,6 +191,8 @@
           href: use-managed-identities-environments.md
         - name: 環境のセキュリティ アラート
           href: environment-security-alerts.md
+        - name: アプリケーション中心の環境を作成
+          href: create-application-centric-environment.md
     - name: 再利用可能なテンプレートの管理
       items:
         - name: カスタム イメージと数式
